<resources>
    <string name="app_name">Мастер НВК Лоток</string>
    <string name="gorizont">Горизонт прибора</string>
    <string name="lotok1">От.Лоток 1</string>
    <string name="lotok2">От.Лоток 2</string>
    <string name="truba">Высота трубы</string>
    <string name="pesok">Подушка песка</string>
    <string name="kolzahvat">Кол-во захваток</string>
    <string name="textviewedit">На этой странице Вы можете отредактировать два параметра (Дно грунт и Дно щебень), в программе по умолчанию эти параметры установлны как (Дно щебень = 00.17) что означает растояние от лотка трубы в колодце до верха щебня на который монтируется колодец, получается следующим образом 7 см растояние от лотка трубы до дна колодца + 10 см толщина дна колодца, получаем 17 сантиметров. И (Дно грунт = 00.37)по умолчанию,  то есть 7 см растояние от лотка трубы до дна колодца + 10 см дно колодца + 20 сантиметров подушка щебня под колодец получаем 37 см.

\n\n<b>Введите свои желаемые данные!\n В формате например 0.20 - 0.40</b></string>

    <string name="dnosheben">Введите Дно Щебень > 0.17</string>
    <string name="dnogrunt">Введите Дно Грунт   > 0.37</string>


</resources>